# Json-Parser

./: CMakeLists.txt  README.md
Interface/: CMakeLists.txt  main.cpp  test.h  test2.h
Parse/: CMakeLists.txt
Parse/Deserializer/: DescriptorState.h  JsonDescriptor.cpp  JsonDescriptor.h  JsonValue.cpp  JsonValue.h
Parse/Tokenizer/: LookUpTable.h  TokenNode.cpp  TokenState.h  Tokenizer.cpp  Tokenizer.h
Tokenizer/: LookUpTable.h  TokenNode.h  TokenState.h  Tokenizer.cpp  Tokenizer.cppm  Tokenizer.h
